# deepin-music

./: CMakeLists.txt
deepin-music-dde-shell-plugin/: CMakeLists.txt  dci.qrc  main.cpp  musicapplet.cpp  musicapplet.h  musicprober.cpp  musicprober.h  themeiconprovider.cpp  themeiconprovider.h
deepin-music-dde-shell-plugin/package/: main.qml  metadata.json
src/music-player/core/: player.cpp
src/music-player/musicList/: AllMusicListDelegate.qml
src/music-player/musicsublist/: AlbumSublistDelegate.qml  ArtistSublistDelegate.qml
src/music-player/playlist/: CurrentPlayListDelegate.qml
